--- a/editor/public/login.html
+++ b/editor/public/login.html
@@ -53,7 +53,7 @@
 <body>
   <div class="login-container">
     <h1>Вход</h1>
-    <form method="POST" action="/login">
+    <form method="POST" action="/_editor/login">
       <input type="text" name="username" placeholder="Логин" required>
       <input type="password" name="password" placeholder="Пароль" required>
       <button type="submit">Войти</button>
