--- a/editor/protected/index.html
+++ b/editor/protected/index.html
@@ -433,8 +433,8 @@
         }
     }
 
-    document.getElementById("translate-Quran").addEventListener("click", processBuffer("translate_Quran"));
-    document.getElementById("translate-hadith").addEventListener("click", processBuffer("translate_hadith"));
+    // document.getElementById("translate-Quran").addEventListener("click", processBuffer("translate_Quran"));
+    // document.getElementById("translate-hadith").addEventListener("click", processBuffer("translate_hadith"));
 
     document.getElementById("process-all").addEventListener("click", async function () {
         const text = bufferMain.getValue();
